-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6
-
None
-
f33146ed0 (dev), cf71d0215 (6.5), 66230621d (6.6), 70c37779d (tqtc/lts-6.2), 7caa8fd02 (tqtc/lts-5.15)
To repro: (open main.qml
)
- Click the red rect => console: "qml: rect"
- Check the "clip" checkbox
- Click the red rect => (nothing)
Expected output:
- Click the red rect => console: "qml: rect"
- Check the "clip" checkbox
- Click the red rect => console: "qml: rect"
- relates to
-
QTBUG-65741 Invalid event clipping
-
- Reported
-
-
QTBUG-9008 A Rectangle with radius doesn't clip a child Image in rounded corners
-
- Closed
-
-
QTBUG-72671 add option to QQuickRectangle to honor corner radius in contains()
-
- Reported
-
- resulted in
-
QTBUG-118037 QtQuick Shapes Module containsMode don't work as expected
-
- Reported
-
| For Gerrit Dashboard: QTBUG-115179 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 490685,5 | Fix pointer delivery to child items of items with clip:true | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 490761,2 | Fix pointer delivery to child items of items with clip:true | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 490762,2 | Fix pointer delivery to child items of items with clip:true | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 490765,3 | Fix pointer delivery to child items of items with clip:true | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
| 490766,6 | Fix pointer delivery to child items of items with clip:true | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |